src/objects/QPMS__QC_settings__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__SessionCancelEmailForTrainer__c</fullName>
        <description>Send Email to Internal Trainers when Course Session is Cancelled.(Email Template Name)</description>
        <inlineHelpText>Send Email to Internal Trainers when Course Session is Cancelled.(Email Template Name)</inlineHelpText>
        <label>SessionCancelEmailForTrainer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__SessionCancelForParticipants__c</fullName>
        <description>Send Email to Participants when Course Session is Cancelled.(Email Template Name)</description>
        <inlineHelpText>Send Email to Participants when Course Session is Cancelled.(Email Template Name)</inlineHelpText>
        <label>SessionCancelForParticipants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__SessionCompletedEmailForTrainer__c</fullName>
        <description>Send Email to Internal Trainers when Course Session is Completed.(Email Template Name)</description>
        <inlineHelpText>Send Email to Internal Trainers when Course Session is Completed.(Email Template Name)</inlineHelpText>
        <label>SessionCompletedEmailForTrainer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__SessionCreationEmailForFollowers__c</fullName>
        <description>Send Email to Followers when Course Session is Created.(Email Template Name)</description>
        <inlineHelpText>Send Email to Followers when Course Session is Created.(Email Template Name)</inlineHelpText>
        <label>SessionCreationEmailForFollowers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__SessionInsessionEmailForParticipants__c</fullName>
        <description>Send Email to Participants when Course Session is In Session.(Email Template Name)</description>
        <inlineHelpText>Send Email to Participants when Course Session is In Session.(Email Template Name)</inlineHelpText>
        <label>SessionInsessionEmailForParticipants</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__SessionOpenEnrollmentEmailForParticipant__c</fullName>
        <description>Send Email to All Participants When Course Session is in Open Enrollment.(Email Template Name)</description>
        <inlineHelpText>Send Email to All Participants When Course Session is in Open Enrollment.(Email Template Name)</inlineHelpText>
        <label>SessionOpenEnrollmentEmailForParticipant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Show_All_Users_Groups_In_Site_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restricted the users/groups to display in site security level</description>
        <inlineHelpText>Restricted the users/groups to display in site security level</inlineHelpText>
        <label>Show All Users/Groups In Site Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Show_Copy_Right__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Copy Right</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Site_Filter_in_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to filter based on site in references</description>
        <label>Site Filter in Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Standard_Object_Names__c</fullName>
        <description>if any standard objects has to mask then user can some objects names here</description>
        <label>Standard Object Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__StaticResource__c</fullName>
        <label>StaticResource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Streaming_Channel_Name__c</fullName>
        <defaultValue>&quot;/u/QualityzeUserNotification&quot;</defaultValue>
        <description>The name of the streaming channel (e.g. /u/QualityzeUserNotification)</description>
        <inlineHelpText>The name of the streaming channel (e.g. /u/QualityzeUserNotification)</inlineHelpText>
        <label>Streaming Channel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Record_Type__c</fullName>
        <description>used in supplier score card</description>
        <label>Supplier Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Report_Id__c</fullName>
        <description>Supplier report id</description>
        <label>Supplier Report Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__SystemAdminProfileID__c</fullName>
        <description>This field will stores system admin filed Id</description>
        <label>SystemAdminProfileID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Task_DueDate_Validation_On_Current_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow user to predefine the due date in Resolution page should update based on Created date or Today&apos;s date</description>
        <label>Task DueDate Validation On Current Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Training_Batch_size__c</fullName>
        <label>Training Batch size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Training_Group_Filter__c</fullName>
        <description>Training Group Filter</description>
        <inlineHelpText>Training Group Filter</inlineHelpText>
        <label>Training Group Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Training_JF_Parent_Update_Batch_Size__c</fullName>
        <description>Batch update size for parent records from Job Function.</description>
        <inlineHelpText>Batch update size for parent records from Job Function.</inlineHelpText>
        <label>Training JF Parent Update Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Training_Junction_Batch_Size__c</fullName>
        <description>Batch size for Training Junctions from Job Function.</description>
        <inlineHelpText>Batch size for Training Junctions from Job Function.</inlineHelpText>
        <label>Training Junction Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Training_ReprotId__c</fullName>
        <description>To save training report id</description>
        <label>Training ReprotId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__TrainingsDeletionFromSessionBatchSize__c</fullName>
        <description>TrainingsDeletionFromSessionBatchSize</description>
        <label>TrainingsDeletionFromSessionBatchSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__TriggerFetchRecordDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To configure getting record details from trigger execution in commonutil class</description>
        <inlineHelpText>To configure getting record details from trigger execution in commonutil class</inlineHelpText>
        <label>TriggerFetchRecordDetails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__URL__c</fullName>
        <label>URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Verification_Plan_RecordTypeId__c</fullName>
        <label>Verification Plan RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__WCT_Registration_Providers__c</fullName>
        <defaultValue>&quot;WHERE Id IN (SELECT ContactId FROM AccountContactRelation WHERE AccountId = &apos;?&apos;)&quot;</defaultValue>
        <description>Where Clause Template for Registration page for Service Provider and Maintenance Provider fields. Enter question mark &quot;?&quot; where value should be replaced</description>
        <inlineHelpText>Where Clause Template for Registration page for Service Provider and Maintenance Provider fields. Enter question mark &quot;?&quot; where value should be replaced</inlineHelpText>
        <label>WCT Registration Providers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Warm_Up_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for warm up to make page load faster</description>
        <inlineHelpText>Flag for warm up to make page load faster</inlineHelpText>
        <label>Warm-Up Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Warm_Up_Time_Interval__c</fullName>
        <defaultValue>10</defaultValue>
        <description>This field holds time interval to perform warm up to make page load faster</description>
        <inlineHelpText>This field holds time interval to perform warm up to make page load faster</inlineHelpText>
        <label>Warm-Up Time interval(In Min.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__isOwnerAsAppover__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To display the owner in approver list</inlineHelpText>
        <label>isOwnerAsAppover</label>
        <type>Checkbox</type>
    </fields>
    <label>QC_settings</label>
</CustomObject>